<resources>
    <!--                    API KEY: 084c79c7722ce9496963780c61fa46a1                         -->
    <string name="API_KEY" translatable="false">"084c79c7722ce9496963780c61fa46a1"</string>
    <string name="app_name">MovieQueryApp</string>
    <string name="movieTitle">movie_title</string>
    <string name="sort_movies">Sort Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="no_internet_connection_please_try_again">Failed to fetch the data. No internet connection.</string>
    <string name="text_data">Simple Json Data</string>
    <string name="refresh">Home</string>
    <string name="todo">TODO</string>
    <string name="no_0">No.0</string>
    <string name="data">Data</string>
    <string name="title">Title :</string>
    <string name="original_title">original_title</string>
    <string name="dttitle">dtTitle</string>
    <string name="release_date">release_date</string>
    <string name="rating">Rating</string>
    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="settings">Settings</string>
    <string name="pref_popular_movie_key" translatable="false">Popular Movies</string>
    <string name="pref_top_rated_movie_key" translatable="false">Top Rated Movies</string>
    <string name="pref_favorite_movie_key" translatable="false">Favorite Movies</string>
    <string name="pref_movie_key" translatable="false">com.example.android.moviequeryapp.movie</string>
    <string name="official_trailers">Official Trailers</string>
    <string name="author_name">Author</string>
    <string name="short_note">Short Note</string>
    <string name="review_content">Review Contents</string>
</resources>
